# waveforge

./: .gitignore  LICENSE.md  README.md  TEST_RESULTS.md  fix_local_first.py  index.html  package.json  pytest.ini  server.py  start.sh  stop.sh  test_results.txt
.agent/: CHUNK_COUNT_FIX.md  NETWORK_INTERRUPTION_FIX.md  RED_BADGE_FIX.md
backend/: .env.example  __init__.py  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py  server.py  server_log.txt
backend/app/routes/: __init__.py  recording_complete.py  transcription.py  tus_upload.py
backend/app/services/: transcription.py
backend/uploaded_data/: .gitkeep
deployment/: DEPLOYMENT_TUS.md
deployment/docker/: Dockerfile  docker-compose.yml
deployment/k8s/: README.md
docs/: ACCESSIBILITY_COMPLIANCE.md  BACKGROUND_SYNC_TESTING.md  BUGFIXES.md  INSTALLATION.md  OFFLINE_CAPABILITY.md
docs/api/: REST_API.md
docs/architecture/: CRASHGUARD.md  SYSTEM_DESIGN.md  TUS_UPLOAD_SYSTEM.md
docs/deployment/: HTTPS_CONFIGURATION.md  KUSTOMIZE_DEPLOYMENT.md  KUSTOMIZE_QUICK_REFERENCE.md
docs/reports/: TEST_COMPLETION_SUMMARY.md
docs/testing/: ALLURE_REPORTING.md  QUICK_START.md
docs/user-guide/: .gitkeep  TROUBLESHOOTING.md
frontend/src/: db-inspector.html  fonts.css  index copy 5.html  index copy.html  index.html  sw.js  transcription-manager.js  (+1 more)
scripts/: deploy-k8s.sh  git-setup.sh  rollback-k8s.sh  run-all-tests.sh  test-bdd.sh  test-integration.sh  test-unit.sh
static/: index.html  index.html.backup_20251201_093626  manifest.json  sw.js
tests/: conftest.py  requirements-test.txt
(+45 files in other folders)
